deploy: 2e006480763f5573a2db9ccd793db4f786c57efc

--- a/suzanne.html
+++ b/suzanne.html
@@ -10439,8 +10439,8 @@ var $author$project$Suzanne$view = function (model) {
 				_List_fromArray(
 					[
 						$author$project$Suzanne$onZoom,
-						$elm$html$Html$Attributes$width(400),
-						$elm$html$Html$Attributes$height(400)
+						$elm$html$Html$Attributes$width(model.width),
+						$elm$html$Html$Attributes$height(model.height)
 					]),
 				_List_fromArray(
 					[
